added some Unit tests in OrderServiceImpl